// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mapper.map(message, localTimestamp) maps binance dex messages 1`] = `undefined`;

exports[`Mapper.map(message, localTimestamp) maps binance dex messages 2`] = `
Array [
  Object {
    "amount": 2070,
    "id": "16927042-0",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.00042701,
    "side": "buy",
    "symbol": "PHB-2DF_BNB",
    "timestamp": 2019-07-01T00:00:22.635Z,
    "type": "trade",
  },
  Object {
    "amount": 2930,
    "id": "16927042-1",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.00042701,
    "side": "buy",
    "symbol": "PHB-2DF_BNB",
    "timestamp": 2019-07-01T00:00:22.635Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance dex messages 3`] = `
Array [
  Object {
    "bestAskPrice": 0.00008414,
    "bestBidPrice": 0.00008379,
    "lastPrice": 0.00008398,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "RAVEN-F66_BNB",
    "timestamp": 1970-01-19T01:52:19.223Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance futures messages 1`] = `
Array [
  Object {
    "amount": 0.236,
    "id": "181349",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 10223.74,
    "side": "buy",
    "symbol": "BTCUSDT",
    "timestamp": 2019-09-17T04:05:03.463Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance futures messages 2`] = `
Array [
  Object {
    "bestAskPrice": NaN,
    "bestBidPrice": NaN,
    "lastPrice": 10223.74,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTCUSDT",
    "timestamp": 2019-09-17T04:05:03.467Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 1`] = `
Array [
  Object {
    "amount": 33.82,
    "id": "40756030",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.0042699,
    "side": "buy",
    "symbol": "BNBBTC",
    "timestamp": 2019-04-01T00:00:00.940Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 2`] = `
Array [
  Object {
    "amount": 6.48,
    "id": "60276726",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.0021965,
    "side": "sell",
    "symbol": "BNBBTC",
    "timestamp": 2019-09-01T00:00:01.034Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 3`] = `
Array [
  Object {
    "bestAskAmount": 0.031201,
    "bestAskPrice": 8012.15,
    "bestBidAmount": 0.142459,
    "bestBidPrice": 8010,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTCUSDT",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "quote",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 4`] = `
Array [
  Object {
    "bestAskPrice": 0.00014498,
    "bestBidPrice": 0.00014365,
    "lastPrice": 0.0001436,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "DOGEBNB",
    "timestamp": 2019-09-30T01:00:59.092Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 5`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 2.31652,
        "price": 4095.99,
      },
      Object {
        "amount": 1.425419,
        "price": 4096,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0.009765,
        "price": 4091.92,
      },
      Object {
        "amount": 0.763931,
        "price": 4089.09,
      },
    ],
    "changeType": "snapshot",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTCUSDC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 6`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 4111.84,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 4084.88,
      },
    ],
    "changeType": "update",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTCUSDC",
    "timestamp": 2019-04-01T00:00:01.699Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 7`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 8`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 3945,
        "price": 0.00002253,
      },
      Object {
        "amount": 50641,
        "price": 0.00002256,
      },
      Object {
        "amount": 1777,
        "price": 0.00002258,
      },
    ],
    "bids": Array [
      Object {
        "amount": 114,
        "price": 0.00002248,
      },
      Object {
        "amount": 370,
        "price": 0.00002246,
      },
      Object {
        "amount": 2673,
        "price": 0.00002245,
      },
      Object {
        "amount": 390,
        "price": 0.00002244,
      },
      Object {
        "amount": 3425,
        "price": 0.00002243,
      },
    ],
    "changeType": "snapshot",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "GNTBTC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "l2change",
  },
  Object {
    "asks": Array [
      Object {
        "amount": 3945,
        "price": 0.00002253,
      },
    ],
    "bids": Array [
      Object {
        "amount": 114,
        "price": 0.00002248,
      },
      Object {
        "amount": 370,
        "price": 0.00002246,
      },
    ],
    "changeType": "update",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "GNTBTC",
    "timestamp": 2019-04-01T00:00:08.698Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps binance messages 10`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 0.00002257,
      },
      Object {
        "amount": 6080,
        "price": 0.00002262,
      },
    ],
    "bids": Array [],
    "changeType": "update",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "GNTBTC",
    "timestamp": 2019-04-01T00:00:09.699Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex derivatives messages 1`] = `undefined`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex derivatives messages 2`] = `
Array [
  Object {
    "fundingRate": null,
    "indexPrice": 173.57,
    "lastPrice": 173.535,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "BTCF0:USTF0",
    "timestamp": 2019-09-29T00:00:01.369Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex derivatives messages 3`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex derivatives messages 4`] = `
Array [
  Object {
    "fundingRate": 0.00196337,
    "indexPrice": 8051.45,
    "lastPrice": 8090.5,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "BTCF0:USTF0",
    "timestamp": 2019-09-30T00:00:52.225Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 1`] = `undefined`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 2`] = `undefined`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 3`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 4`] = `
Array [
  Object {
    "amount": 0.00705845,
    "id": "382489563",
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "price": 10087.98969503,
    "side": "buy",
    "symbol": "BTCUSD",
    "timestamp": 2019-08-01T00:00:00.709Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 5`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 6`] = `undefined`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 7`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 13.33333333,
        "price": 218.75,
      },
      Object {
        "amount": 2,
        "price": 218.76,
      },
    ],
    "bids": Array [
      Object {
        "amount": 31.52,
        "price": 216,
      },
    ],
    "changeType": "snapshot",
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:00.541Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 8`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 18.10913638,
        "price": 219.11,
      },
    ],
    "bids": Array [],
    "changeType": "update",
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:01.214Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 218.99,
      },
    ],
    "bids": Array [],
    "changeType": "update",
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:01.769Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 10`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 218.03,
      },
    ],
    "changeType": "update",
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:02.483Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitfinex messages 11`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 1`] = `
Array [
  Object {
    "amount": 1000,
    "id": "f73b6f28-075a-3548-a81c-8c843afd2746",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "price": 8544.5,
    "side": "sell",
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:19.163Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 2`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 3`] = `Array []`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 4`] = `
Array [
  Object {
    "bestAskPrice": 0.03163,
    "bestBidPrice": 0.03162,
    "fundingRate": undefined,
    "indexPrice": 0.03131,
    "lastPrice": 0.03161,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 0.03162,
    "openInterest": 150499,
    "symbol": "ETHM19",
    "timestamp": 2019-05-31T23:59:30.000Z,
    "type": "ticker",
  },
  Object {
    "bestAskPrice": 0.01354,
    "bestBidPrice": 0.013535,
    "fundingRate": undefined,
    "indexPrice": 0.013382,
    "lastPrice": 0.01354,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 0.013533,
    "openInterest": 204654,
    "symbol": "LTCM19",
    "timestamp": 2019-05-31T23:59:55.000Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 5`] = `
Array [
  Object {
    "bestAskPrice": 267.75,
    "bestBidPrice": 267.7,
    "fundingRate": undefined,
    "indexPrice": 0.03131,
    "lastPrice": 0.03161,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 0.03162,
    "openInterest": 150499,
    "symbol": "ETHM19",
    "timestamp": 2019-05-31T23:59:58.022Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 6`] = `
Array [
  Object {
    "bestAskAmount": 62427,
    "bestAskPrice": 267.75,
    "bestBidAmount": 701,
    "bestBidPrice": 267.7,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-05-31T23:59:59.942Z,
    "type": "quote",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 7`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 501,
        "price": 88846.5,
      },
      Object {
        "amount": 40,
        "price": 9780.5,
      },
      Object {
        "amount": 61227,
        "price": 8586,
      },
    ],
    "bids": Array [],
    "changeType": "snapshot",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "l2change",
  },
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 417,
        "price": 0.0010102,
      },
    ],
    "changeType": "snapshot",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "EOSM19",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 8`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 91227,
        "price": 8586,
      },
    ],
    "bids": Array [],
    "changeType": "update",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 8586,
      },
    ],
    "bids": Array [],
    "changeType": "update",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps bitmex messages 10`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 416,
        "price": 0.0010102,
      },
    ],
    "changeType": "update",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "EOSM19",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps deribit messages 1`] = `
Array [
  Object {
    "amount": 2000,
    "id": "39355898",
    "localTimestamp": 2019-09-01T00:00:22.578Z,
    "price": 9598.5,
    "side": "sell",
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-09-01T00:00:22.565Z,
    "type": "trade",
  },
  Object {
    "amount": 50,
    "id": "39355899",
    "localTimestamp": 2019-09-01T00:00:22.578Z,
    "price": 9598.5,
    "side": "sell",
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-09-01T00:00:22.565Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps deribit messages 2`] = `
Array [
  Object {
    "bestAskAmount": 49710,
    "bestAskPrice": 9601,
    "bestBidAmount": 162800,
    "bestBidPrice": 9600.5,
    "localTimestamp": 2019-09-01T00:00:22.578Z,
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-09-01T00:00:00.183Z,
    "type": "quote",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps deribit messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 179803,
        "price": 218.6,
      },
      Object {
        "amount": 7887,
        "price": 218.65,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1895,
        "price": 217.8,
      },
      Object {
        "amount": 712,
        "price": 217.75,
      },
    ],
    "changeType": "snapshot",
    "localTimestamp": 2019-09-01T00:00:22.578Z,
    "symbol": "ETH-PERPETUAL",
    "timestamp": 2019-08-01T00:00:00.273Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps deribit messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 64903,
        "price": 219.2,
      },
      Object {
        "amount": 19343,
        "price": 219.1,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 217.8,
      },
    ],
    "changeType": "update",
    "localTimestamp": 2019-09-01T00:00:22.578Z,
    "symbol": "ETH-PERPETUAL",
    "timestamp": 2019-08-01T00:00:54.272Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps deribit messages 5`] = `
Array [
  Object {
    "bestAskPrice": 10095.5,
    "bestBidPrice": 10095,
    "fundingRate": 0,
    "indexPrice": 10091.15,
    "lastPrice": 10095.5,
    "localTimestamp": 2019-09-01T00:00:22.578Z,
    "markPrice": 10094.1,
    "openInterest": 66128281,
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-08-01T00:00:04.229Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 1`] = `
Array [
  Object {
    "amount": 4,
    "id": "2578238628528131",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 4061.94,
    "side": "sell",
    "symbol": "BTC-USD-190628",
    "timestamp": 2019-03-31T23:59:59.388Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 2`] = `
Array [
  Object {
    "amount": 5,
    "id": "3269040623943685",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 10209.43,
    "side": "buy",
    "symbol": "BTC-USD-190927",
    "timestamp": 2019-08-01T00:00:01.320Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 3`] = `
Array [
  Object {
    "amount": 0.12,
    "id": "423886239",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 328.74,
    "side": "sell",
    "symbol": "BCH-USDT",
    "timestamp": 2019-08-01T00:00:08.806Z,
    "type": "trade",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 264,
        "price": 0.3198,
      },
      Object {
        "amount": 222,
        "price": 0.3199,
      },
      Object {
        "amount": 2014,
        "price": 0.3219,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1646,
        "price": 0.3196,
      },
      Object {
        "amount": 1672,
        "price": 0.3195,
      },
    ],
    "changeType": "update",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "XRP-USD-SWAP",
    "timestamp": 2019-08-01T00:00:08.930Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 5`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 38,
        "price": 4084.57,
      },
      Object {
        "amount": 20,
        "price": 4085,
      },
    ],
    "bids": Array [
      Object {
        "amount": 4,
        "price": 4084.56,
      },
      Object {
        "amount": 29,
        "price": 4084.5,
      },
    ],
    "changeType": "snapshot",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "BTC-USD-190405",
    "timestamp": 2019-08-01T00:00:08.930Z,
    "type": "l2change",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 6`] = `
Array [
  Object {
    "bestAskPrice": 0.0001659,
    "bestBidPrice": 0.0001654,
    "lastPrice": 0.0001659,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "TRX-ETH",
    "timestamp": 2019-04-01T00:00:27.106Z,
    "type": "ticker",
  },
]
`;

exports[`Mapper.map(message, localTimestamp) maps okex messages 7`] = `
Array [
  Object {
    "bestAskPrice": 329.3,
    "bestBidPrice": 329.29,
    "lastPrice": 329.3,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "BCH-USD-SWAP",
    "timestamp": 2019-08-01T00:00:02.483Z,
    "type": "ticker",
  },
]
`;
